src/assets/stylesheets/app.css
/* ... */
.settings-dropdown form:focus {
  outline: none;
}

.popover:focus {
  outline: none;
}

.table-compact {
  color: unset !important;
}

.table-compact tr td:first-child {
  padding-left: 0;
}

.table-compact tr td:last-child {
  padding-right: 0;
}

/* custom elements */

.font-serif {
  font-family: Georgia, serif;
}

.font-monospace {
  font-family: SFMono-Regular, Menlo, Consolas, monospace;
}

.icon {
  height: 1rem;
  width: 1rem;
  display: inline-block;
  line-height: 1;
}

.icon > svg , .icon > img {
  width: 1rem;
  height: 1rem;
  vertical-align: top;
}

.icon-small {
  width: .6rem;
  height: .6rem;
  display: inline-block;
}

.icon-small > svg , .icon-small > img {
  width: .6rem;
  height: .6rem;
}

.feed-icon {
  width: 16px;
  height: 16px;
  min-width: 16px;
  margin-left: -18px !important;
}

.counter {
  padding-left: .5rem;
  opacity: .6;
}

.light {
  opacity: .6;
}

.selectgroup {
  position: relative;
  display: block;
  margin: 0;
}

.selectgroup *, .noselect, .dropdown-menu * {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.selectgroup input {
  opacity: 0;
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
  height: 100%;
}

.selectgroup + .selectgroup {
  margin-top: .25rem;
}

.selectgroup-label {
  padding: .375rem .5rem;
  border-radius: 4px;
  overflow-wrap: break-word;
}

.selectgroup-label:hover {
  cursor: pointer;
}

.toolbar-item:hover,
.toolbar-search:hover,
.selectgroup-label:hover,
.dropdown-item:hover {
  background-color: #f0f0f0;
}

.expanded {
  transform: rotate(90deg);
}

@keyframes stroke {
  from { stroke-dashoffset: 120; }
  to   { stroke-dashoffset: 0; }
}

@keyframes rotate {
  from { transform: rotate(0); }
  to   { transform: rotate(360deg); }
}

.loading {
  color: transparent!important;
  min-height: .8rem;
  pointer-events: none;
  position: relative;
}

.loading::after {
  animation: rotate .5s infinite linear;
  border: .1rem solid #6c757d;
  border-radius: 50%;
  border-right-color: transparent;
  border-top-color: transparent;
  content: "";
  display: block;
  height: 1rem;
  width: 1rem;
  left: 50%;
  margin-left: -.5rem;
  margin-top: -.5rem;
  position: absolute;
  top: 50%;
  z-index: 1;
}

.icon-loading > svg {
  animation: stroke 2s infinite normal;
  stroke-dasharray: 60;
}

.btn-default {
  border: 1px solid #ced4da;
  border-radius: .25rem;
  box-shadow: 0 1px 2px rgba(0,0,0,0.1);
}

.btn-default:active {
  background: #f5f7f9;
  box-shadow: none;
}

.btn-outline {
  border: 1px solid #ced4da;
  border-radius: .25rem;
}

.btn-outline:hover {
  background-color: #f8f9fa;
}

.toolbar {
  min-height: 2rem !important;
  max-height: 2rem !important;
}

.toolbar-item {
  display: inline-block;
  background-color: transparent;
  text-decoration: none;
  user-select: none;
  border: 1px solid transparent;
  padding: .25rem .5rem;
  font-size: 1rem;
  border-radius: .25rem;
  line-height: 1;
  color: inherit;

  text-align: center;
  vertical-align: middle;
  border-radius: 3px;
  cursor: pointer;
  color: inherit;
}

.toolbar-item:focus {
  outline: none;
}

.toolbar-item:disabled {
  opacity: 0.4;
  cursor: not-allowed;
}

.cursor-pointer {
  cursor: pointer;
}

.cursor-default {
  cursor: default;
}

.drag {
  position: absolute;
  top: 0;
  right: 0;
  width: 6px;
  height: 100%;
  z-index: 900;
  cursor: col-resize;
}

.input-icon {
  position: relative;
}

.input-icon .icon {
  position: absolute;
  display: flex;
  align-items: center;
  height: 100%;
  width: 2rem;
  justify-content: center;
  pointer-events: none;
}

.input-icon input {
  padding-left: 2rem !important;
  width: 100%;
}

.toolbar-search {
  border: none;
  border-radius: 3px;
  padding: .25rem .5rem;
  line-height: 1;
}

.toolbar-search:hover, .toolbar-search:focus {
  background-color: #f3f3f3;
  outline: none;
}

#opml-import-form input[type="file"]::-webkit-file-upload-button {
  position: absolute;
  top: -999px;
  left: -999px;
}

.custom-modal {
  background-color: rgba(0, 0, 0, 0.9);
  overflow-y: auto;
  display: block !important;
}

/* content */

.content {
  overflow-wrap: break-word;
  line-height: 1.5;
}

.content-wrapper {
  max-width: 60rem;
  margin: 0 auto;
}

.content img, .content video {
  max-width: 100%;
  height: auto;
}

.content iframe {
  display: block;
  max-width: 100%;
  margin-bottom: 0.5rem;
}

.content .video-wrapper {
  position: relative;
  display: block;
  width: 100%;
  overflow: hidden;
}

.content .video-wrapper::before {
  display: block;
  padding-top: 56.25%; /* 16x9 aspect ratio */
  content: "";
}

.content .video-wrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.content pre {
  overflow-x: auto;
  color: inherit;
  border: 1px solid #dee2e6;
  border-radius: 3px;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  padding: 0.5rem;
}

.content a {
  color: inherit;
  text-decoration: underline;
}

.content blockquote {
  border-left: 3px solid #22262a;
  padding-left: 1rem;
}

.content h1 {
  font-size: 1.8rem;
}
.content h2 {
  font-size: 1.5rem;
}
.content h3 {
  font-size: 1.17rem;
}
.content h4,
.content h5,
.content h6 {
  font-size: 1rem;
}

.content p {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

/* theme: light */

button.theme-light {
  background-color: #fff !important;
}

a,
.btn-link:hover {
  color: #0080d4;
}

.toolbar-item.active,
.dropdown-item.active,
.dropdown-item:active,
.selectgroup input:checked + .selectgroup-label {
  color: #fff;
  background-color: #0080d4 !important;
}

.btn-default:focus,
.form-control:focus {
  border-color: #0080d4;
}

/* theme: sepia */

.theme-sepia,
.theme-sepia .btn-default,
.theme-sepia .dropdown-menu,
.theme-sepia .form-control,
.theme-sepia .modal-content,
.theme-sepia .toolbar-search {
  background-color: #f4f0e5 !important;
}
/* ... */

